--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,28 @@
+/src/environments/**
 .env
 .firebaserc
 .env.prod
 
 # Angular
 .angular
+
+yarn-error.log
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# dependencies
+node_modules
