--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.0",
+    "@angular-devkit/core": "^16.0.0",
+    "@angular-devkit/schematics": "^16.0.0",
     "@angular-eslint/builder": "^16.0.0",
     "@angular-eslint/eslint-plugin": "^16.0.0",
     "@angular-eslint/eslint-plugin-template": "^16.0.0",
@@ -45,6 +47,9 @@
     "@angular/language-service": "^16.0.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@nrwl/angular": "^16.1.4",
+    "@nx/angular": "16.2.1",
+    "@nx/workspace": "16.2.1",
+    "@schematics/angular": "^16.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
@@ -61,6 +66,8 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "nx": "16.2.1",
+    "nx-cloud": "latest",
     "ts-node": "^8.3.0",
     "typescript": "~5.0.2"
   }
