--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@ionic/angular": "^7.0.0",
     "firebase": "^9.21.0",
     "firebase-functions": "^4.3.1",
+    "ionic-select-searchable": "^2.10.0",
     "ionicons": "^7.0.0",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
