--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jasmine-core": "~4.6.0",
     "jasmine-spec-reporter": "~5.0.0",
+    "jest": "^29.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
