--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,10 @@ jobs:
         uses: actions/checkout@v2
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
-      - name: Jest run
-        run: npm test
+      - name: Cypress run
+        uses: cypress-io/github-action@v2
         with:
           build: npm run build
           start: npm start
-      
+      - name: Jest run
+        run: npm test
