--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "types": ["jest", "node"] ,
     "target": "es2022",
     "module": "es2020",
     "lib": [
