--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@nx/workspace": "16.2.1",
     "@schematics/angular": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.5.1",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
@@ -64,6 +65,7 @@
     "jasmine-core": "~4.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "jest": "^29.5.0",
+    "jest-preset-angular": "^13.1.1",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
@@ -72,6 +74,7 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "nx": "16.2.1",
     "nx-cloud": "latest",
+    "ts-jest": "^29.1.0",
     "ts-node": "^8.3.0",
     "typescript": "~5.0.2"
   }
