--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@ionic/angular": "^7.0.0",
+    "@ngxs/store": "^3.8.1",
     "firebase": "^9.22.0",
     "firebase-functions": "^4.3.1",
     "ionic-select-searchable": "^2.10.0",
