--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "ng": "ng",
     "start": "firebase emulators:exec --project=demo-project --ui 'ng serve'",
     "start:windows": "start cmd /k \"firebase emulators:start\" & start cmd /k \"ng serve\"",
+    "start:imported": "firebase emulators:exec --import .emulators --project=demo-project --ui 'ng serve'",
+    "start:windows:imported": "start cmd /k \"firebase emulators:start --import .emulators\" & start cmd /k \"ng serve\"",
     "stop": "lsof -t -i :5001 -i:5002 -i:5003 -i:5004 -i:5005 -i:5006 -i:5007 -i:5008 -i:5009 -i:4200 | xargs kill -9",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
