--- a/package.json
+++ b/package.json
@@ -27,25 +27,25 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@ionic/angular": "^7.0.0",
-    "@ngxs/store": "^3.8.1",
+    "@ngxs-labs/actions-executing": "^1.0.3",
+    "@ngxs/devtools-plugin": "^3.7.6",
+    "@ngxs/form-plugin": "^3.7.6",
+    "@ngxs/logger-plugin": "^3.7.6",
+    "@ngxs/router-plugin": "^3.7.6",
+    "@ngxs/schematics": "^0.0.1-alpha.5",
+    "@ngxs/storage-plugin": "^3.7.6",
+    "@ngxs/store": "^3.7.6",
+    "@nxtend/capacitor": "^13.0.0",
+    "@nxtend/ionic-angular": "13.1.0",
     "firebase": "^9.22.0",
     "firebase-functions": "^4.3.1",
+    "immer": "^9.0.19",
     "ionic-select-searchable": "^2.10.0",
     "ionicons": "^7.0.0",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0",
-    "@ngxs/store": "^3.7.6",
-    "@ngxs/router-plugin": "^3.7.6",
-    "@ngxs/form-plugin": "^3.7.6",
-    "@ngxs/logger-plugin": "^3.7.6",
-    "@ngxs/storage-plugin": "^3.7.6",
-    "@ngxs-labs/actions-executing": "^1.0.3",
-    "@ngxs/devtools-plugin": "^3.7.6",
-    "@nxtend/capacitor": "^13.0.0",
-    "@nxtend/ionic-angular": "13.1.0",
-    "immer": "^9.0.19"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.0",
