--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nxtend/capacitor": "^13.0.0",
     "@nxtend/ionic-angular": "13.1.0",
     "firebase": "^9.22.0",
+    "firebase-admin": "^11.9.0",
     "firebase-functions": "^4.3.1",
     "immer": "^9.0.19",
     "ionic-select-searchable": "^2.10.0",
