--- a/package.json
+++ b/package.json
@@ -1,130 +1,96 @@
 {
-  "name": "mystery-shopper",
+  "name": "ionic-app-base",
   "version": "0.0.0",
-  "license": "MIT",
+  "author": "Ionic Framework",
+  "homepage": "https://ionicframework.com/",
   "scripts": {
-    "firebase:use:dev": "firebase use default",
-    "firebase:use:prod": "firebase use production",
-    "export:emulators": "firebase emulators:export .emulators",
-    "start:app:dev": "yarn run env-cmd -f .env nx run app:serve --configuration=development",
-    "start:api:dev": "yarn run env-cmd -f .env nx run api:serve --configuration=development",
-    "start:cli:dev": "yarn run env-cmd -f .env nx run cli:serve --configuration=development",
-    "start:emulators": "firebase emulators:start",
-    "start:emulators:imported": "firebase emulators:start --import .emulators",
-    "build:app:dev": "yarn run env-cmd -f .env nx run app:build --configuration=development",
-    "build:app:prod": "yarn run env-cmd -f .env.prod nx run app:build --configuration=production",
-    "build:api:dev": "yarn run env-cmd -f .env nx run api:build --configuration=development",
-    "build:api:prod": "yarn run env-cmd -f .env.prod nx run api:build --configuration=production",
-    "build:cli:dev": "yarn run env-cmd -f .env nx run cli:build --configuration=development",
-    "build:cli:prod": "yarn run env-cmd -f .env.prod nx run cli:build --configuration=production",
-    "deploy:dev": "firebase deploy",
-    "deploy:prod": "firebase deploy",
-    "deploy:app:dev": "firebase deploy --only=hosting",
-    "deploy:app:prod": "firebase deploy --only=hosting",
-    "deploy:api:dev": "firebase deploy --only=functions",
-    "deploy:api:prod": "firebase deploy --only=functions",
-    "shipit:prod": "yarn build:app:prod && yarn build:api:prod && yarn deploy:prod",
-    "generate:pwa:assets:icons": "pwa-asset-generator apps/app/src/assets/logos/schadre-logo-only.png apps/app/src/assets/pwa --favicon --icon-only --padding \"20px\" --mstile --maskable --manifest apps/app/src/manifest.webmanifest",
-    "generate:pwa:assets:splashes": "pwa-asset-generator apps/app/src/assets/logos/schadre-logo-only.png apps/app/src/assets/pwa --favicon --splash-only --padding \"150px\" --mstile --maskable --manifest apps/app/src/manifest.webmanifest",
-    "host:app": "http-server dist/apps/app",
-    "test:ci": "yarn nx run-many --target=test --all --parallel --coverage --coverageReporters=lcov && node ./tools/coverageMerger.js",
-    "start:everything": "$TERMINAL yarn start:api:dev & $TERMINAL yarn start:app:dev & $TERMINAL yarn start:emulators:imported & ",
-    "start:everything:windows": "start cmd /k \"yarn start:api:dev\" & start cmd /k \"yarn start:emulators\" & start cmd /k \"yarn start:app:dev\""
+    "ng": "ng",
+    "start": "firebase emulators:exec --project=demo-project --ui 'ng serve'",
+    "start:windows": "start cmd /k \"firebase emulators:start\" & start cmd /k \"ng serve\"",
+    "start:imported": "firebase emulators:exec --import .emulators --project=demo-project --ui 'ng serve'",
+    "start:windows:imported": "start cmd /k \"firebase emulators:start --import .emulators\" & start cmd /k \"ng serve\"",
+    "stop": "lsof -t -i :5001 -i:5002 -i:5003 -i:5004 -i:5005 -i:5006 -i:5007 -i:5008 -i:5009 -i:4200 | xargs kill -9",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~15.1.0",
-    "@angular/common": "~15.1.0",
-    "@angular/compiler": "~15.1.0",
-    "@angular/core": "~15.1.0",
+    "@angular/animations": "^16.0.0",
+    "@angular/common": "^16.0.0",
+    "@angular/compiler": "^16.0.0",
+    "@angular/core": "^16.0.0",
     "@angular/fire": "^7.5.0",
-    "@angular/forms": "~15.1.0",
-    "@angular/platform-browser": "~15.1.0",
-    "@angular/platform-browser-dynamic": "~15.1.0",
-    "@angular/pwa": "^15.1.6",
-    "@angular/router": "~15.1.0",
-    "@angular/service-worker": "~15.1.0",
-    "@capacitor/core": "^3.2.5",
-    "@ionic/angular": "^6.1.9",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/cqrs": "^9.0.3",
-    "@nestjs/platform-express": "^9.0.0",
-    "@ngxs-labs/actions-executing": "^1.0.3",
-    "@ngxs/devtools-plugin": "^3.7.6",
+    "@angular/forms": "^16.0.0",
+    "@angular/platform-browser": "^16.0.0",
+    "@angular/platform-browser-dynamic": "^16.0.0",
+    "@angular/router": "^16.0.0",
+    "@ionic/angular": "^7.0.0",
+    "@ngxs/store": "^3.8.1",
+    "firebase": "^9.22.0",
+    "firebase-admin": "^11.9.0",
+    "firebase-functions": "^4.3.1",
+    "ionic-select-searchable": "^2.10.0",
+    "ionicons": "^7.0.0",
+    "ng2-search-filter": "^0.5.1",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.13.0",
+    "@ngxs/store": "^3.7.6",
+    "@ngxs/router-plugin": "^3.7.6",
     "@ngxs/form-plugin": "^3.7.6",
     "@ngxs/logger-plugin": "^3.7.6",
-    "@ngxs/router-plugin": "^3.7.6",
     "@ngxs/storage-plugin": "^3.7.6",
-    "@ngxs/store": "^3.7.6",
+    "@ngxs-labs/actions-executing": "^1.0.3",
+    "@ngxs/devtools-plugin": "^3.7.6",
     "@nxtend/capacitor": "^13.0.0",
     "@nxtend/ionic-angular": "13.1.0",
-    "axios": "^1.0.0",
-    "cuid": "^3.0.0",
-    "firebase-admin": "^11.5.0",
-    "firebase-functions": "^4.2.1",
-    "immer": "^9.0.19",
-    "moment": "^2.29.4",
-    "nest-commander": "^3.6.0",
-    "ngx-moment": "^6.0.2",
-    "ngx-skeleton-loader": "^7.0.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "immer": "^9.0.19"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~15.1.0",
-    "@angular-devkit/core": "~15.1.0",
-    "@angular-devkit/schematics": "~15.1.0",
-    "@angular-eslint/eslint-plugin": "~15.0.0",
-    "@angular-eslint/eslint-plugin-template": "~15.0.0",
-    "@angular-eslint/template-parser": "~15.0.0",
-    "@angular/cli": "~15.1.0",
-    "@angular/compiler-cli": "~15.1.0",
-    "@angular/language-service": "~15.1.0",
-    "@capacitor/android": "^3.2.5",
-    "@capacitor/cli": "^3.2.5",
-    "@capacitor/ios": "^3.2.5",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@nrwl/angular": "15.7.1",
-    "@nrwl/cypress": "15.7.1",
-    "@nrwl/devkit": "15.7.1",
-    "@nrwl/eslint-plugin-nx": "15.7.1",
-    "@nrwl/jest": "15.7.1",
-    "@nrwl/linter": "15.7.1",
-    "@nrwl/nest": "15.7.1",
-    "@nrwl/node": "15.7.1",
-    "@nrwl/nx-cloud": "15.0.3",
-    "@nrwl/webpack": "15.7.1",
-    "@nrwl/workspace": "15.7.1",
-    "@nxtend/capacitor": "^13.0.0",
-    "@schematics/angular": "~15.1.0",
-    "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "cypress": "^12.2.0",
-    "env-cmd": "^10.1.0",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "glob": "^10.2.2",
-    "http-server": "^14.1.1",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "28.1.1",
-    "jest-preset-angular": "~12.2.3",
-    "ng-packagr": "~15.1.0",
-    "nx": "15.7.1",
-    "postcss": "^8.4.5",
-    "postcss-import": "~14.1.0",
-    "postcss-preset-env": "~7.5.0",
-    "postcss-url": "~10.1.3",
-    "prettier": "^2.6.2",
-    "pwa-asset-generator": "^6.2.1",
-    "ts-jest": "28.0.5",
-    "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "@angular-devkit/build-angular": "^16.0.0",
+    "@angular-devkit/core": "^16.0.0",
+    "@angular-devkit/schematics": "^16.0.0",
+    "@angular-eslint/builder": "^16.0.0",
+    "@angular-eslint/eslint-plugin": "^16.0.0",
+    "@angular-eslint/eslint-plugin-template": "^16.0.0",
+    "@angular-eslint/schematics": "^16.0.0",
+    "@angular-eslint/template-parser": "^16.0.0",
+    "@angular/cli": "^16.0.0",
+    "@angular/compiler": "^16.0.0",
+    "@angular/compiler-cli": "^16.0.0",
+    "@angular/language-service": "^16.0.0",
+    "@ionic/angular-toolkit": "^9.0.0",
+    "@nrwl/angular": "^16.1.4",
+    "@nx/angular": "16.2.1",
+    "@nx/workspace": "16.2.1",
+    "@schematics/angular": "^16.0.0",
+    "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.5.1",
+    "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
+    "cypress": "^12.12.0",
+    "eslint": "^7.26.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsdoc": "30.7.6",
+    "eslint-plugin-prefer-arrow": "1.2.2",
+    "ionic-mocks": "^1.3.0",
+    "jasmine-core": "~4.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "jest": "^29.5.0",
+    "jest-preset-angular": "^13.1.1",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "nx": "16.2.1",
+    "nx-cloud": "latest",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^8.3.0",
+    "typescript": "~5.0.2"
   }
 }
