--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ionic-select-searchable": "^2.10.0",
     "ionicons": "^7.0.0",
     "ng2-search-filter": "^0.5.1",
+    "openai": "^3.3.0",
     "rxjs": "~7.8.0",
     "swiper": "^9.4.1",
     "tslib": "^2.3.0",
