added gym name and gym location

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@ngxs/store": "^3.7.6",
     "@nxtend/capacitor": "^13.0.0",
     "@nxtend/ionic-angular": "13.1.0",
+    "axios": "^1.4.0",
     "firebase": "^9.22.0",
     "firebase-admin": "^11.9.0",
     "firebase-functions": "^4.3.1",
