--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "@ngxs/store": "^3.7.6",
     "@nxtend/capacitor": "^13.0.0",
     "@nxtend/ionic-angular": "13.1.0",
+    "chart.js": "^4.3.0",
     "firebase": "^9.22.0",
     "firebase-admin": "^11.9.0",
     "firebase-functions": "^4.3.1",
     "immer": "^9.0.19",
     "ionic-select-searchable": "^2.10.0",
     "ionicons": "^7.0.0",
+    "ng2-charts": "^4.1.1",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~7.8.0",
     "swiper": "^9.4.1",
