--- a/functions/package.json
+++ b/functions/package.json
@@ -13,9 +13,9 @@
   "engines": {
     "node": "16"
   },
-  "type": "module",
-  "main": "src/index.ts",
+  "main": "index.js",
   "dependencies": {
+    "axios": "^1.4.0",
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.2.0"
   },
