--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@nx/angular": "16.2.1",
     "@nx/workspace": "16.2.1",
     "@schematics/angular": "^16.0.0",
+    "@testing-library/jest-dom": "^5.17.0",
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^12.11.1",
