--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,20 @@ name: Tests
 on: [push]
 
 jobs:
+  AddEnvironmentVariablesFile:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js 19
+        uses: actions/setup-node@v3
+        with:
+          node-version: "19.x"
+          cache: 'npm'
+      - uses: mskelton/setup-yarn@v1
+        with:
+          node-version: '19.x'
+      - run: touch src/app/environments/environment.ts
+      - run: echo ${{secrets.ENVIRONMENT_VARIABLES}} >> src/app/environments/environment.ts
   unitTests:
     runs-on: ubuntu-latest
     steps:
