--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,6 @@ jobs:
           node-version: '19.x'
       - run: mkdir src/environments
       - run: touch src/environments/environment.ts
-      - run: echo ${{secrets.ENVIRONMENT_VARIABLES}} >> src/environments/environment.ts
+      - run: echo "${{secrets.ENVIRONMENT_VARIABLES}}" >> src/environments/environment.ts
       - run: yarn
       - run: yarn jest --testPathPattern=int.spec.ts
