added capacitor to node modules

--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@capacitor/android": "5.2.2",
+    "@capacitor/app": "5.0.6",
+    "@capacitor/core": "5.2.2",
+    "@capacitor/haptics": "5.0.6",
+    "@capacitor/keyboard": "5.0.6",
+    "@capacitor/status-bar": "5.0.6",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/geolocation": "^5.36.0",
     "@ionic/angular": "^7.0.0",
@@ -42,6 +48,7 @@
     "@nxtend/ionic-angular": "13.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "axios": "^1.4.0",
+    "cors-anywhere": "^0.4.4",
     "firebase": "^9.22.0",
     "firebase-admin": "^11.9.0",
     "firebase-functions": "^4.3.1",
@@ -69,6 +76,7 @@
     "@angular/compiler": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
+    "@capacitor/cli": "5.2.2",
     "@ionic/angular-toolkit": "^9.0.0",
     "@nrwl/angular": "^16.1.4",
     "@nx/angular": "16.2.1",
