--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "firebase emulators:exec --project=demo-project --ui 'ng serve'",
+    "start": "firebase emulators:exec --project=sweatsession --ui 'ng serve'",
     "start:windows": "start cmd /k \"firebase emulators:start\" ",
-    "start:imported": "firebase emulators:exec --import .emulators --project=demo-project --ui 'ng serve'",
+    "start:imported": "firebase emulators:exec --import .emulators --project=sweatsession --ui 'ng serve'",
     "start:windows:imported": "start cmd /k \"firebase emulators:start --import .emulators\" & start cmd /k \"ng serve\"",
     "fix:node_modules": "cp -p fixes/interfaces.d.ts node_modules/@angular/fire/compat/firestore/interfaces.d.ts",
     "stop": "lsof -t -i :5001 -i:5002 -i:5003 -i:5004 -i:5005 -i:5006 -i:5007 -i:5008 -i:5009 -i:4200 | xargs kill -9",
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@angular/service-worker": "^16.1.7",
     "@capacitor/android": "5.2.2",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.2.2",
