--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,4 +37,5 @@ jobs:
       - name: CodeCov
         uses: codecov/codecov-action@v2
         with:
+          files: coverage/lcov.info
           token: ${{ secrets.CODECOV_TOKEN }}
