--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: '19.x'
       - run: yarn
-      - run: yarn jest
+      - run: yarn jest --testPathPattern=unit.spec.ts
   integrationTests:
     runs-on: ubuntu-latest
     steps:
