--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,11 +18,21 @@ jobs:
       - uses: mskelton/setup-yarn@v1
         with:
           node-version: '19.x'
+      
+      - uses: actions/checkout@v2
+      - name: Install Firebase CLI 
+        run: npm install -g firebase-tools
+  
+      - name: Inject Environment Variables
       - run: mkdir src/environments
       - run: touch src/environments/environment.ts
       - run: echo "${{secrets.ENVIRONMENT_VARIABLES}}" >> src/environments/environment.ts
+      
+      - name: Install Dependencies
       - run: yarn
       - run: yarn fix:node_modules
+      
+      - name: Login, Build And Deploy
       - run: firebase login:ci --token "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
       - run: ionic build --prod
       - run: firebase deploy
