--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,6 +24,9 @@ jobs:
       - run: echo "${{secrets.ENVIRONMENT_VARIABLES}}" >> src/environments/environment.ts
       - run: yarn
       - run: yarn fix:node_modules
-      - run: firebase login:ci --token "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
+      - name: Login to Firebase 
+        env:
+          FIREBASE_TOKEN: "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
+        run: firebase login:ci
       - run: ionic build --prod
       - run: firebase deploy
