--- a/firebase.json
+++ b/firebase.json
@@ -20,6 +20,7 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
+    "public": "www",
     "source": "/",
     "destination": "/SweatSession/splash",
     "ignore": [
