--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
     "@capacitor/cli": "5.2.2",
+    "@cypress/schematic": "^2.5.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@nrwl/angular": "^16.1.4",
     "@nx/angular": "16.2.1",
