--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,7 @@ jobs:
         with:
           node-version: '19.x'
       - run: npm install -g firebase-tools
+      - run: npm install -g @angular/cli@latest
       - run: mkdir src/environments
       - run: touch src/environments/environment.ts
       - run: echo "${{secrets.ENVIRONMENT_VARIABLES}}" >> src/environments/environment.ts
