App works on android

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@angular/service-worker": "^16.1.7",
     "@capacitor/android": "5.2.2",
     "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.2.2",
+    "@capacitor/core": "^5.2.2",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
@@ -80,7 +80,7 @@
     "@angular/compiler": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
-    "@capacitor/cli": "5.2.2",
+    "@capacitor/cli": "^5.2.2",
     "@cypress/schematic": "^2.5.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@nrwl/angular": "^16.1.4",
