--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@angular/animations": "^16.0.0",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
@@ -30,7 +31,7 @@
     "@angular/service-worker": "^16.1.7",
     "@capacitor/android": "5.2.2",
     "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.2.2",
+    "@capacitor/core": "^5.2.2",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
@@ -48,6 +49,7 @@
     "@nxtend/capacitor": "^13.0.0",
     "@nxtend/ionic-angular": "13.1.0",
     "@testing-library/jest-dom": "^5.17.0",
+    "@types/three": "^0.155.1",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "cors-anywhere": "^0.4.4",
@@ -62,8 +64,10 @@
     "node-fetch": "^3.3.2",
     "openai": "^3.3.0",
     "rxjs": "~7.8.0",
+    "save": "^2.9.0",
     "swiper": "^9.4.1",
     "testing-library": "^0.0.2",
+    "three": "^0.156.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -80,7 +84,7 @@
     "@angular/compiler": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
-    "@capacitor/cli": "5.2.2",
+    "@capacitor/cli": "^5.2.2",
     "@cypress/schematic": "^2.5.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@nrwl/angular": "^16.1.4",
