--- a/firebase.json
+++ b/firebase.json
@@ -60,6 +60,12 @@
     "eventarc": {
       "port": 5009
     },
-    "singleProjectMode": true
+    "singleProjectMode": true,
+    "pubsub": {
+      "port": 8085
+    },
+    "ui": {
+      "enabled": true
+    }
   }
 }
