--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start:imported": "firebase emulators:exec --import .emulators --project=sweatsession --ui 'ng serve'",
     "start:windows:imported": "start cmd /k \"firebase emulators:start --import .emulators\" & start cmd /k \"ng serve\"",
     "fix:node_modules": "cp -p fixes/interfaces.d.ts node_modules/@angular/fire/compat/firestore/interfaces.d.ts",
+    "fix_windows:node_modules": "xcopy /y fixes\\interfaces.d.ts node_modules\\@angular\\fire\\compat\\firestore\\interfaces.d.ts",
     "stop": "lsof -t -i :5001 -i:5002 -i:5003 -i:5004 -i:5005 -i:5006 -i:5007 -i:5008 -i:5009 -i:4200 | xargs kill -9",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
