Update build.yml to exclude java file analysis

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          # Specify the exclusions pattern for Java files
+          extraProperties: |
+            sonar.exclusions=**/*.java
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         with:
