sonar cloud fix

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=COS301-SE-2023_SweatSession
 sonar.organization=cos301-se-2023
-
+sonar.exclusions=**/*.java
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=SweatSession
 #sonar.projectVersion=1.0
